# 1118computerCode

./: README.md
01-Geant4 example/T1program/: PhysicsListGuide ZH.docx  PhysicsListGuide.docx
01-Geant4 example/T1program/T1program/: CMakeLists.txt  T1program.cc  init_vis.mac  run1.mac
01-Geant4 example/T1program/T1program/include/: T1ActionInitialization.hh  T1Analysis.hh  T1DetectorConstruction.hh  T1EventAction.hh  T1PrimaryGeneratorAction.hh  T1RunAction.hh  T1SteppingAction.hh
01-Geant4 example/T1program/T1program/src/: T1ActionInitialization.cc  T1DetectorConstrucgtion.cc  T1DetectorConstrucgtion.cc.bak2  T1EventAction.cc  T1PrimaryGeneratorAction.cc  T1RunAction.cc  T1SteppingAction.cc
BNCT_CODE/BNCT-MCNP/: 01-常用代码块.imcnp
BNCT_CODE/BNCT-MCNP/20201202_p-target/: P-Li_position 0 0 0.txt  P-Li_position 0 0 0_v2.txt  P-Li_position 0 1p4 1p4_v2.txt  P-Li_position 0 2 0.txt  P-Li_position 0 2 0_v2.txt  p-Li.imcnp  p-Li.omcnp  p-Li_v2.omcnp  test20201202.txt
BNCT_CODE/BNCT-MCNP/20201202_p-target/data analysis/: Untitled.ipynb
BNCT_CODE/BNCT-MCNP/20201202_p2-3MeV_BSA_epi/: BNCT-BSA-epi.imcnp
BNCT_CODE/BNCT-MCNP/example/: Li-t-75-6M.txt
proton to Carbon_CODE/20201202_p2C/: 20201125剥离膜散射计算-蒙卡模拟要求.docx  p2C.imcnp
